# Annual_Report_Creator

./: .env  LogisticRegression.ipynb  Readme.md  SVC_GolfData.ipynb  app.py  config.yaml  docker-compose.yaml  pyproject.toml  sample.env  template.py
ReportData/: chroma.sqlite3
backend/: .gitignore  Crew.py  Dockerfile.backend  app.py  helpers.py  pyproject.toml
backend/ReportData/: chroma.sqlite3
backend/config/: agent.yaml  task.yaml
backend/db/: chroma.sqlite3
db/: chroma.sqlite3
insta-report/: Dockerfile.frontend  package-lock.json  package.json
insta-report/src/app/: page.js
insta-report/src/app/components/: FileUploader.js  Navbar.js  ReportEditor.js
insta-report/src/app/styles/: FileUploader.module.css  page.module.css  report.module.css
